--- a/index.html
+++ b/index.html
@@ -18,23 +18,25 @@
 			background: none;
 			position: relative;
 		}
+
 		.cont {
 			display: inline-block;
 			margin: 1% 6%;
 		}
-		.subject{
+
+		.subject {
 			margin: 5% 27%;
 			font-weight: bold;
-			font-size:0.95rem;
+			font-size: 0.95rem;
 		}
-		
+
 
 		.progress::after {
 			content: "";
 			width: 100%;
 			height: 100%;
 			border-radius: 50%;
-			border: 6px solid aqua;
+			border: 6px solid rgb(117, 113, 107);
 			position: absolute;
 			top: 0;
 			left: 0;
@@ -89,10 +91,45 @@
 			position: relative;
 			top: 27%;
 			left: 37%;
-			font-size:1.5rem;
+			font-size: 1.5rem;
 		}
-		.set-color{
-			color:greenyellow;
+
+		.set-color {
+			color: aquamarine;
+		}
+
+		.textAlign {
+			text-align: justify;
+			text-justify: inter-word;
+		}
+
+		.colorContainer {
+			border: solid 2px;
+			padding: 20px 20px;
+			border-radius: 20px;
+		}
+		.leftLogo{
+			display:inline-block
+		}
+		.rightContent{
+			display:inline-block;
+			width:232px;
+		}
+		.GELogo{
+			border-radius: 2px;
+			background-image: url('images/GE\ logo.jpg');
+			background-repeat: no-repeat;
+		}
+		.companyName{
+			color:aquamarine;
+			font-size: 19px;
+		}
+		.rightPart{
+			display:inline-block;
+		}
+		.paraTest{
+			margin-top:20px;
+			margin-bottom:20px;
 		}
 	</style>
 </head>
@@ -130,47 +167,52 @@
 			<!-- Intro -->
 			<article id="intro">
 				<h2 class="major">Intro</h2>
-				<p>Software developer with 3+ years of experience in working on both backend, frontend, including
-					design,
-					feature enhancement, debugging and deployment. Having good interaction with customers, for resolving
-					issues, writing automated tests to assure quality of the application.</p>
-				<p>Currently seeking a challenging position
-					as Software engineer to enhance my skill and proficiency in a renowned organization.</p>
-				<p></p>
-				<p></p>
+				<div class="colorContainer">
+					<div class="textAlign">
+						Software developer with 3+ years of experience in working on both backend, frontend, including
+						design, feature enhancement, debugging and deployment. Having good interaction with customers,
+						for resolving issues, writing automated tests to assure quality of the application.
+					</div>
+					<div class="textAlign">
+						Currently seeking a challenging position as Software engineer to enhance my skill and
+						proficiency in a renowned organization.
+					</div>
+				</div>
 			</article>
 
 			<!-- Work -->
 			<article id="work">
 				<h2 class="major">Work</h2>
-				<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac.
-					Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer
-					sollicitudin mauris nec lorem luctus ultrices.</p>
-				<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna
-					sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas
-					laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat
-					tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat
-					tempus.</p>
+				<div class="colorContainer">
+					<div class="companyName">
+						Ge Digital, Bangalore 
+					</div>
+					<div style="font-style: italic; color: aquamarine; display:inline-block; width: 76%">Software Engineer Specialist</div>
+					<div style="display:inline-block">
+						Aug-2017 - Present
+					</div>
+					<div class="paraTest textAlign">
+						Contributed in integration of various modules like ActiveMQ, Scheduler, Services and databases to make Policy designer work smoothly as part of the APM. The Objective of Policy designer is to develop and execute strategies based on historical data and dynamic data.
+					</div>
+					<div class="paraTest textAlign">
+						Implemented workflow and provided maintenance to APM SSO configured with identity provider like ADFS and Azure Active directory.
+					</div>
+					<div class="paraTest textAlign">
+						Implemented workflow where cumstomer can get alerts on Scheduled or triggered basis.
+						This was implemented via integrating Email service and Quartz scheduler.
+					</div>
+			   </div>
 			</article>
 
 			<!-- Projects -->
 			<article id="Projects">
 				<h2 class="major">Projests</h2>
-				<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-				<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac.
-					Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer
-					sollicitudin mauris nec lorem luctus ultrices.</p>
-				<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna
-					sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas
-					laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat
-					tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat
-					tempus.</p>
 			</article>
 
 			<!-- Skills -->
 			<article id="Skills">
 				<h2 class="major">Skills</h2>
-				<div>
+				<div class="colorContainer">
 					<div class="cont">
 						<div class="subject">
 							Python
@@ -187,7 +229,8 @@
 								<div class="h2 font-weight-bold">80<sup class="small">%</sup></div>
 							</div>
 						</div>
-					</div><div class="cont">
+					</div>
+					<div class="cont">
 						<div class="subject">
 							C#
 						</div>
@@ -203,7 +246,8 @@
 								<div class="h2 font-weight-bold">85<sup class="small">%</sup></div>
 							</div>
 						</div>
-					</div><div class="cont">
+					</div>
+					<div class="cont">
 						<div class="subject">
 							Java Script
 						</div>
@@ -219,7 +263,8 @@
 								<div class="h2 font-weight-bold">80<sup class="small">%</sup></div>
 							</div>
 						</div>
-					</div><div class="cont">
+					</div>
+					<div class="cont">
 						<div class="subject">
 							.NET MVC
 						</div>
@@ -235,7 +280,8 @@
 								<div class="h2 font-weight-bold">75<sup class="small">%</sup></div>
 							</div>
 						</div>
-					</div><div class="cont">
+					</div>
+					<div class="cont">
 						<div class="subject">
 							Web API
 						</div>
@@ -251,7 +297,8 @@
 								<div class="h2 font-weight-bold">75<sup class="small">%</sup></div>
 							</div>
 						</div>
-					</div><div class="cont">
+					</div>
+					<div class="cont">
 						<div class="subject">
 							SQL Server
 						</div>
@@ -267,7 +314,8 @@
 								<div class="h2 font-weight-bold">70<sup class="small">%</sup></div>
 							</div>
 						</div>
-					</div><div class="cont">
+					</div>
+					<div class="cont">
 						<div class="subject">
 							CI/CD Jenkins
 						</div>
@@ -283,7 +331,8 @@
 								<div class="h2 font-weight-bold">80<sup class="small">%</sup></div>
 							</div>
 						</div>
-					</div><div class="cont">
+					</div>
+					<div class="cont">
 						<div class="subject">
 							Docker
 						</div>
@@ -299,7 +348,8 @@
 								<div class="h2 font-weight-bold">70<sup class="small">%</sup></div>
 							</div>
 						</div>
-					</div><div class="cont">
+					</div>
+					<div class="cont">
 						<div class="subject">
 							Kubernets
 						</div>
@@ -315,7 +365,8 @@
 								<div class="h2 font-weight-bold">70<sup class="small">%</sup></div>
 							</div>
 						</div>
-					</div><div class="cont">
+					</div>
+					<div class="cont">
 						<div class="subject">
 							HTML/CSS
 						</div>
@@ -331,23 +382,8 @@
 								<div class="h2 font-weight-bold">75<sup class="small">%</sup></div>
 							</div>
 						</div>
-					</div><div class="cont">
-						<div class="subject">
-							Python
-						</div>
-						<div class="progress mx-auto set-color" data-value='80'>
-							<span class="progress-left">
-								<span class="progress-bar border-primary"></span>
-							</span>
-							<span class="progress-right">
-								<span class="progress-bar border-primary"></span>
-							</span>
-							<div
-								class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-								<div class="h2 font-weight-bold">80<sup class="small">%</sup></div>
-							</div>
-						</div>
-					</div><div class="cont">
+					</div>
+					<div class="cont">
 						<div class="subject">
 							React JS
 						</div>
@@ -363,7 +399,8 @@
 								<div class="h2 font-weight-bold">70<sup class="small">%</sup></div>
 							</div>
 						</div>
-					</div><div class="cont">
+					</div>
+					<div class="cont">
 						<div class="subject">
 							Knockout JS
 						</div>
@@ -379,9 +416,27 @@
 								<div class="h2 font-weight-bold">65<sup class="small">%</sup></div>
 							</div>
 						</div>
-					</div><div class="cont">
+					</div>
+					<div class="cont">
 						<div class="subject">
 							Git
+						</div>
+						<div class="progress mx-auto set-color" data-value='80'>
+							<span class="progress-left">
+								<span class="progress-bar border-primary"></span>
+							</span>
+							<span class="progress-right">
+								<span class="progress-bar border-primary"></span>
+							</span>
+							<div
+								class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
+								<div class="h2 font-weight-bold">80<sup class="small">%</sup></div>
+							</div>
+						</div>
+					</div>
+					<div class="cont">
+						<div class="subject">
+							Agile
 						</div>
 						<div class="progress mx-auto set-color" data-value='80'>
 							<span class="progress-left">
